# dnsRelay

./: .gitignore  CMakeLists.txt  README.md  clear.sh
src/: .clang-format  CMakeLists.txt  main.c  test.c  test.h  unidef.h
src/core/: CMakeLists.txt  cache.c  cache.h  dns.c  dns.h  host.c  host.h  inverse_query.c  inverse_query.h  logger.c  logger.h  request_cache.c  request_cache.h  socket.c  socket.h
src/model/: CMakeLists.txt  answer.c  answer.h  list.c  list.h  meta.h  record.c  record.h  trie.c  trie.h
